# qemu-ia64

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: ia64-conformance.yml
accel/tcg/: cpu-exec.c  tb-maint.c  translate-all.c
configs/targets/: ia64-softmmu.mak
docs/devel/: ia64-engine-roles.rst  ia64-guest-firmware.rst  ia64-opcode-ledger.csv  index-internals.rst
hw/: Kconfig  meson.build
hw/acpi/: aml-build.c  meson.build  pci-crs.c
hw/display/: vga-isa.c
hw/ia64/: Kconfig  efi-bit-blob.c  efi-bit.c  efi-boot-manager.c  efi-console.c  efi-services.c  efi-storage.c  efi-vars.c  efi.c  firmware.c  meson.build  sparse-io.c  vibatnium.c  vibtanium-internal.h  vibtanium.c
hw/intc/: ia64-iosapic.c  meson.build  trace-events
hw/pci/: pci.c
hw/scsi/: lsi53c895a.c
include/qemu/: base-arch-defs.h
include/system/: system.h
include/tcg/: tcg.h
include/ui/: console.h  gtk.h
pc-bios/: README.ia64-firmware  meson.build
qapi/: machine.json
scripts/: ia64-build-and-test.sh  ia64-conformance-runner.py  ia64-fetch-conformance-manuals.sh  ia64-gen-conformance-closure.py  ia64-gen-implementation-surface.py  ia64-gen-opcode-ledger.py  ia64-run-required-conformance.sh  ia64-validate-alat-lifecycle-tranche.py  ia64-validate-conformance-runner.py  ia64-validate-correctness-lessons.py  ia64-validate-debug-register-tranche.py  ia64-validate-decoder-bundle-tranche.py  ia64-validate-evidence-map.py  ia64-validate-first-architectural-tranche.py  ia64-validate-memory-boundary-tranche.py  ia64-validate-normative-catalogue.py  ia64-validate-packed-integer-tranche.py  ia64-validate-performance-monitor-tranche.py  ia64-validate-predicate-branch-tranche.py  ia64-validate-processor-identification-tranche.py  ia64-validate-protection-key-tranche.py  ia64-validate-region-register-tranche.py  ia64-validate-scalar-integer-tranche.py  ia64-validate-translation-register-tranche.py  meson-buildoptions.sh
system/: vl.c
tcg/: tcg.c
tests/ia64-conformance/: README.md  (+21 more)
ui/: console.c  gtk.c  trace-events  vt100.c
(+85 files in other folders)
